# sysmon

./: .editorconfig  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: cd.yml  ci.yml  main.yml  post-release.yml
common-types/: Cargo.toml  build.rs
common-types/src/: lib.rs  monitor.rs  network.rs  screen.rs  settings.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: listen-to-event.json  listen-to-monitor-event.json
desktop/src/: lib.rs  main.rs
desktop/src/_entry/: mod.rs
desktop/src/_utils/: bytes_to_string.rs  mod.rs
desktop/src/auto_start/: setup.rs
desktop/src/settings/: command.rs  mod.rs  persist.rs  setup.rs  window.rs
desktop/src/single_instance/: setup.rs
desktop/src/tray_menu/: setup.rs
desktop/src/updater/: setup.rs
desktop/src/widget/: command.rs  mod.rs  monitor.rs  setup.rs  window.rs
desktop/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/web/src/: App.tsx  main.tsx
desktop/web/src/_entries/: settings.html  settings.tsx  style.css  widget.html  widget.tsx
desktop/web/src/_entry/: app.tsx
desktop/web/src/_utils/: extract-position-for-screen-id-set.ts  transparent-window.css  type.ts
desktop/web/src/components/: network.tsx
desktop/web/src/components/network/: .test.tsx  index.tsx  style.module.css
desktop/web/src/hooks/: use-current-screen-id-set.ts  use-event-listener.ts  use-monitor-event.ts  use-settings.ts
lib-cpp/: Cargo.toml  build.rs
lib-cpp/cpp/src/: lib.cc  lib.h  network_info.cc  observe_screen_info.cc  screen_info.cc  screen_info.h
lib-cpp/src/: lib.rs
lib-swift/: .taurignore  Cargo.toml  build.rs
lib-swift/src/: lib.rs
lib-swift/swift/: .gitignore  Package.swift
lib-swift/swift/Sources/lib-rust/: NetworkInfo.swift  ObserveScreenInfo.swift  ScreenInfo.swift  bridging-header.h  lib.swift
macos/: Cargo.toml  build.rs
macos/src/: lib.rs
macos/src/network_info/: mod.rs
macos/src/screen_info/: mod.rs
macos/swift-package/: Package.resolved  Package.swift
macos/swift-package/Sources/macos/: NetworkInfo.swift  ScreenInfo.swift  macos.swift
macos/swift-package/Tests/macosTests/: macosTests.swift
old/: .gitignore
old/public/: maximized.html
old/scripts/: update-readme.js
old/src/: App.tsx  styles.css
old/src-tauri/: Cargo.toml  tauri.conf.json
old/src-tauri/capabilities/: widget.json
old/src-tauri/src/: lib.rs
old/src-tauri/src/monitor/: mod.rs
old/src-tauri/src/settings/: mod.rs
old/src-tauri/src/utils/: windows.rs
old/src-tauri/src/widget/: mod.rs
scripts/: bump-version.rs  format.rs  save-old-version.js  setup.rs  setup.rs.ps1  tauri.rs  update.rs
src/: App.css  App.tsx  main.rs  styles.css
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  main.json  widget.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/autostart/: mod.rs
src-tauri/src/monitor/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/update/: mod.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/widget/: mod.rs
