[workspace]
resolver = "3"
members = ["desktop", "common-types", "macos", "lib-swift"]
exclude = ["scripts"]

package.edition = "2024"
package.authors = ["ZibanPirate <zakman.dev@gmail.com>"]
package.readme = "README.md"
package.license = "MIT"
package.repository = "https://github.com/ZibanPirate/sysmon"
package.version = "0.1.0"
package.publish = false


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
common-types = { path = "./common-types" }
macos = { path = "./macos" }
typeshare = "1"
tauri = { version = "2", default-features = false }
