[package]
name = "common-types"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
export_bindings = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
typeshare = { workspace = true }
tauri = { workspace = true, default-features = false }
