[package]
name = "sysmon"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.2", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.9", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0.0-beta.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-positioner = { version = "2.0.0-beta.2", features = ["tray-icon"] }
tokio = { version = "1.36.0", features = ["full"] }
